--- a/index (1).html
+++ b/index (1).html
@@ -22,7 +22,7 @@
 				<ul class="list">
 					<li class="list-items about"><a href="#"><img src="images/about.png" alt=""></a></li>
 					<li class="list-items donuts"><a href="#"><img src="images/menu.png" alt=""></a></li>
-					<li class="list-items location"><a href="#"><img src="images/pin-2.png" alt=""></a></li>
+					<li class="list-items pin"><a href="#"><img src="images/pin-2.png" alt=""></a></li>
 				</ul>
 			</nav>
 
@@ -44,41 +44,42 @@
 						<a class="coffee" class="animate__animated animate__rubberBand" href="#"><img src="images/coffee-glass.jpg" alt=""></a>
 					</div>
 				</div>
-
+				
 				<div class="donuts">
 					<h3 class="donut-title">Donuts</h3>
-					<div class="card">
-						<img class="donut-img" src="images/donut-card-4.png" alt="">
-						<h3 class="title-1">Rainbow sprinkle</h3>
-						<p class="desc-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-							Voluptatibus fugit cum ipsum architecto provident beatae.
-						</p>
-					</div>
+					<div class="donut-section">
+						<div class="card">
+							<img class="donut-img" src="images/donut-card-4.png" alt="">
+							<h3 class="title-1">Rainbow sprinkle</h3>
+							<p class="desc-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+								Voluptatibus fugit cum ipsum architecto provident beatae.
+							</p>
+						</div>
 
-					<div class="card">
-						<img class="donut-img-choc" src="images/donut-card-5.png" alt="">
-						<h3 class="title-1">Rainbow sprinkle</h3>
-						<p class="desc-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-							Voluptatibus fugit cum ipsum architecto provident beatae.
-						</p>
-					</div>
+						<div class="card">
+							<img class="donut-img-choc" src="images/donut-card-5.png" alt="">
+							<h3 class="title-1">Rainbow sprinkle</h3>
+							<p class="desc-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+								Voluptatibus fugit cum ipsum architecto provident beatae.
+							</p>
+						</div>
 
-					<div class="card">
-						<img class="donut-img" src="images/donut-card-3.png" alt="">
-						<h3 class="title-1">Rainbow sprinkle</h3>
-						<p class="desc-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-							Voluptatibus fugit cum ipsum architecto provident beatae.
-						</p>
-					</div>
+						<div class="card">
+							<img class="donut-img" src="images/donut-card-3.png" alt="">
+							<h3 class="title-1">Rainbow sprinkle</h3>
+							<p class="desc-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+								Voluptatibus fugit cum ipsum architecto provident beatae.
+							</p>
+						</div>
 
-					<div class="card">
-						<img class="donut-img" src="images/donut-card-1.png" alt="">
-						<h3 class="title-1">Rainbow sprinkle</h3>
-						<p class="desc-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-							Voluptatibus fugit cum ipsum architecto provident beatae.
-						</p>
+						<div class="card">
+							<img class="donut-img" src="images/donut-card-1.png" alt="">
+							<h3 class="title-1">Rainbow sprinkle</h3>
+							<p class="desc-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+								Voluptatibus fugit cum ipsum architecto provident beatae.
+							</p>
+						</div>
 					</div>
-					
 				</div>
 			</section>
 
